# cpp20-plus-indepth

./: README.md
01/: CMakeLists.txt
01/src/v1/: a.cpp
01/src/v2/: b.cpp  b.h
01/v1/: b.cpp
01/v2/: a.cpp
01/v3/: a.cpp
02/01-ModuleGettingStarted/: CMakeLists.txt
02/01-ModuleGettingStarted/src/: helloworld.cpp  main.cpp
02/02-MultiModules/: CMakeLists.txt
02/02-MultiModules/src/: bye.cpp  helloworld.cpp  main.cpp
02/03-ModuleInclude/: CMakeLists.txt
02/03-ModuleInclude/src/: h1.h  helloworld.ixx
02/04-GlobalModuleFragment/: CMakeLists.txt
02/04-GlobalModuleFragment/src/: h2.h  (+2 more)
02/05-PrivateModuleFragment/: CMakeLists.txt
02/05-PrivateModuleFragment/src/: helloworld.cpp
02/06-ModulePartition/: CMakeLists.txt
02/06-ModulePartition/src/: helloworld.cpp  helloworldA.cpp  helloworldA.ixx  helloworldB.cpp  helloworldB.ixx
03/: CMakeLists.txt
03/ImageProcessorSrc/: main.cpp
03/ImageProcessorSrc/app/: app.cpp
03/ImageProcessorSrc/cache/: cache.cpp  loader.cpp
03/ImageProcessorSrc/command/: argument.cpp  command.cpp  parser.cpp
03/ImageProcessorSrc/image/: image.cpp  processor.cpp
03/ImageProcessorSrc/network/: connection.cpp  network.cpp  request.cpp  response.cpp  server.cpp
03/src/: main.cpp
03/src/app/: app.cpp
03/src/cache/: cache.cpp  loader.ixx
03/src/command/: argument.ixx  command.ixx  parser.cpp
03/src/image/: image.ixx  processor.cpp
03/src/network/: connection.cpp  network.ixx  request.cpp  response.ixx  server.cpp
04/01-BasicTemplate/: CMakeLists.txt
04/02-Specializations/: CMakeLists.txt
04/02-Specializations/src/: c13.h  main.cpp
04/03-ParamterPack/: CMakeLists.txt
04/04-TypeTraits/: CMakeLists.txt
04/05-ErrorMessage/: CMakeLists.txt
05/01-BasicConcepts/: CMakeLists.txt
05/02-Conjunctions/: CMakeLists.txt
05/03-Disjunctions/: CMakeLists.txt
05/04-AutomicConstraints/: CMakeLists.txt
05/05-RequiresExpressions/: CMakeLists.txt
05/06-RequiresClauses/: CMakeLists.txt
06/NumCpp/: CMakeLists.txt
06/NumCpp/src/: main.cpp
06/NumCpp/src/numcpp/: array.cpp  array.ixx  array_view.cpp  array_view.ixx  concepts.cpp  creation.ixx  numcpp.cpp  types.cpp  types.ixx  utils.cpp  utils.ixx
06/NumCpp/src/numcpp/algorithm/: aggregate.cpp  algorithm.cpp  basic.ixx  universal.ixx
07/01-BasicThread/: CMakeLists.txt
07/02-BasicFileSystem/: CMakeLists.txt
07/02-BasicFileSystem/src/: main.cpp
07/03-FutureFileSystem/: CMakeLists.txt
08/01-PromiseType/: CMakeLists.txt
08/02-CoroutineHandle/: CMakeLists.txt
08/03-Generator/: CMakeLists.txt
09_and_10/Asyncpp/: CMakeLists.txt
11_and_12/: CMakeLists.txt
11_and_12/Projects/01-STLSample/src/: main.cpp
11_and_12/Projects/02-RangesSample/src/: main.cpp
11_and_12/Projects/03-RangesIteratorSample/src/: main.cpp
11_and_12/Projects/04-RangesSizeSample/src/: main.cpp
11_and_12/Projects/05-RangesDataSample/src/: main.cpp
11_and_12/Projects/06-RangesDanglingFailed/src/: main.cpp
11_and_12/Projects/07-RangesDanglingCheck/src/: main.cpp
11_and_12/Projects/08-ViewBasic/src/: main.cpp
11_and_12/Projects/09-ArrayView/src/: main.cpp
11_and_12/Projects/10-FactorySample/src/: main.cpp
11_and_12/Projects/11-AdaptorSample/src/: main.cpp
11_and_12/Projects/12-STLRandom/src/: main.cpp
11_and_12/Projects/13-PipelineSample/src/: main.cpp
13/src/: data.cpp  main.cpp
14/: CMakeLists.txt
14/Projects/01-SimpleLog/src/: main.cpp
14/Projects/02-FormatTo/src/: main.cpp
14/Projects/03-VFormat/src/: main.cpp
14/Projects/04-Formatter/src/: main.cpp
15/: CMakeLists.txt
15/Projects/logger/include/logging/: Level.h  Logger.h  Record.h
15/Projects/logger/include/logging/formatters/: ModernFormatter.h  StreamFormatter.h
15/Projects/logger/include/logging/handlers/: DefaultHandler.h  FileHandler.h  StreamHandler.h
15/Projects/logger/src/logging/formatters/: CFormatter.cpp  ModernFormatter.cpp  StreamFormatter.cpp
15/Projects/sample/src/: main.cpp
16_and_17/: CMakeLists.txt
16_and_17/Projects/01-OldBit/src/: main.cpp
16_and_17/Projects/02-EndianProcess/src/: main.cpp
16_and_17/Projects/03-BitCast/src/: main.cpp
16_and_17/Projects/04-BitRotating/src/: main.cpp
16_and_17/Projects/05-OtherBit/src/: main.cpp
16_and_17/Projects/06-DataStream/include/: data.h
16_and_17/Projects/06-DataStream/include/ca/: BitCompact.h  BitUtils.h  IoUtils.h  RangeUtils.h  SerializeUtils.h  Types.h
16_and_17/Projects/06-DataStream/include/ca/algorithms/: FunctionalAlgorithm.h  ProcedureAlgorithm.h
16_and_17/Projects/06-DataStream/src/: data.cpp  main.cpp
16_and_17/Projects/06-DataStream/src/ca/: IoUtils.cpp  SerializeUtils.cpp
16_and_17/Projects/06-DataStream/src/ca/algorithms/: FunctionalAlgorithm.cpp  ProcedureAlgorithm.cpp  RangesAlgorithm.cpp
18/: CMakeLists.txt
18/Projects/01-JThreadSample/src/: main.cpp
18/Projects/01-OldBit/src/: main.cpp
18/Projects/02-SourceLocation/src/: main.cpp
18/Projects/03-Calendar/src/: main.cpp
18/Projects/04-Timezone/src/: main.cpp
18/Projects/05-SyncStream/src/: main.cpp
18/Projects/06-U8String/src/: main.cpp
18/Projects/07-WindowsThread/src/: main.cpp
19/: CMakeLists.txt
19/Projects/calendar/include/: Logger.h
19/Projects/calendar/include/actions/: ExitAction.h  ExportAction.h  ShowAction.h
19/Projects/calendar/include/menu/: Menu.h
19/Projects/calendar/include/utils/: CalendarUtils.h  IOUtils.h  RenderUtils.h
19/Projects/calendar/src/: Logger.cpp  main.cpp
19/Projects/calendar/src/actions/: ExitAction.cpp  ExportAction.cpp  ShowAction.cpp
19/Projects/calendar/src/menu/: Menu.cpp
19/Projects/calendar/src/utils/: CalendarUtils.cpp  IOUtils.cpp  RenderUtils.cpp
19/Projects/logger/include/logging/: Formatter.h  Handler.h  Logger.h  Record.h
19/Projects/logger/include/logging/formatters/: CFormatter.h
19/Projects/logger/include/logging/handlers/: DefaultHandler.h  FileHandler.h  StreamHandler.h
19/Projects/logger/src/logging/formatters/: CFormatter.cpp  ModernFormatter.cpp  StreamFormatter.cpp
mid_term_exam_sol/: CMakeLists.txt
mid_term_exam_sol/src/: main.cpp
(+61 files in other folders)
